--- a/static/css/legacy-datatables.less
+++ b/static/css/legacy-datatables.less
@@ -47,22 +47,21 @@
   font-size: 12px;
   color: @grey;
   display: inline-block;
-  text-align: left;
 }
 
 .dataTables_filter {
   width: 50%;
   float: right;
+  text-align: right;
   font-size: 12px;
   color: @grey;
-  margin-bottom: 20px;
 }
 
 .dataTables_filter input {
-  margin: 5px 0 0 5px;
+  margin: 0 0 0 5px;
   border-radius: 5px;
   padding: 3px;
-  border: 1px solid @grey;
+  border: 1px solid @mid-grey;
 }
 
 .dataTables_info {
